# pydargs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
src/pydargs/: __init__.py  utils.py
tests/: test_from_file.py  test_nested.py  test_parse.py  test_pydantic.py  test_recursive.py  test_subparser.py  test_types.py
